--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack -p --config webpack.config.js"
+    
   },
   "author": "",
   "license": "ISC",
